# rust-template

./: .gitignore  Cargo.toml
src/application/service/: Cargo.toml
src/application/service/src/: lib.rs
src/binaries/: Cargo.toml
src/binaries/application/: main.rs
src/common/base/: Cargo.toml
